fix code blocks overflowing on low width

--- a/src/assets/styles/base/_reboot.scss
+++ b/src/assets/styles/base/_reboot.scss
@@ -123,6 +123,7 @@ dl {
 
 pre {
   margin: 0;
+  overflow-x: auto;
 }
 
 //
